ECOPROJECT-3085 | feat: Allow sharing an assessment resource
Add 3 endpoints to the API:
1. Create share_token or get if already exists
2. Delete share_token
3. Get share_token using the source ID
4. List all share_token in the org_id
5. Get assesment resource with share token (no authentication required)
